# easy_yolo_converter

./: .gitignore  README.md  crop_and_segment.py  pyproject.toml  requirements.txt  slice_pic.py  yolo_split.py
