[project]
name = "crop-and-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.10",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "yolosplitter>=0.5.0.0",
]
